Fix offset caused from scrollbar removal, instead make scrollbar invisible

--- a/src/components/carousel/Carousel.css
+++ b/src/components/carousel/Carousel.css
@@ -3,15 +3,12 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  scrollbar-width: none;
 }
 
 .carousel-content {
   height: 100%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: -17px;
+  scrollbar-width: none;
   overflow-x: hidden;
   overflow-y: auto;
 }
