--- a/src/pages/overview-page/OverviewPage.css
+++ b/src/pages/overview-page/OverviewPage.css
@@ -7,11 +7,6 @@
   
 #overview {
     height: 100%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: -17px;
     overflow-y: auto;
 }
 
